[package]
name = "fnd"
version = "0.3.0"
authors = ["Mathew Robinson <mrobinson@praelatus.io>"]
description = "A simple way to find files."
homepage = "https://github.com/chasinglogic/fnd"
repository = "https://github.com/chasinglogic/fnd"
readme = "README.md"
keywords = ["cli", "search", "files", "utility"]
categories = ["command-line-interface", "command-line-utilities", "filesystem"]
license = "Apache-2.0"

[dependencies]
regex = "0.2.1"
walkdir = "1.0.7"
clap = "2.24.2"
ansi_term = "0.9.0"
